[package]
name = "expm"
version = "0.1.2"
authors = ["Richard Janis Goldschmidt <janis.beckert@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/superfluffy/rust-expm"
description = "An implementation of the expm matrix exponential function by Higham and Al-Mohy, 2009"
readme = "README.md"

categories = ["science"]
keywords = ["matrix", "exponential", "linalg", "ndarray", "expm"]

[dependencies]
cblas = "0.4.0"
condest = {git="https://github.com/einseler/rust-condest"}  
lapacke = "0.5.0"
ndarray = "0.15.6"
statrs = "0.16.0"

[dev-dependencies]
approx = "0.5.1"
openblas-src = "0.10.5"
